# ReGenesis-LDO

./: .editorconfig  .gitignore  ENTRANCE_CARDS_COMPLETE_LIST.md  FLOATING_HUD_SYSTEM_COMPLETE.md  GATE_DESIGN_SYSTEM.md  GATE_MIGRATION_AUDIT.md  KSP_ARCHITECTURE_FIX.md  LDO_MANIFEST.md  LICENSE  MISSION_COMPLETE.md  PR_DESCRIPTION.md  README.md  RELEASE_NOTES_v0.9.5-wallstreet-ldo.md  TECHNICAL_STATUS_REPORT.md  THE_LDO_WAY.md  build.gradle.kts  build_errors_4.txt  build_errors_5.txt  build_log.txt  build_log_utf8.txt  fix_java_version.bat  gradle.properties  gsa.json  settings.gradle.kts
.claude/: settings.local.json
agents/: META_INSTRUCT_AGENTS.md
app/: build.gradle.kts  multidex-config.pro
benchmark/: build.gradle.txt
build-logic/: apply-yukihook-conventions.gradle.kts  build.gradle.kts
context/: MODELOPS_SETUP.md  ProjectRefactorPlan.md  SCREEN_INVENTORY.md  TEST_COVERAGE_SUMMARY.md  build_log.txt  build_log10.txt  build_log3.txt  build_log4.txt  build_log6.txt  build_log7.txt  build_log8.txt
core/: build.gradle.kts
core-module/: build.gradle.kts
docs/: XAI_BRIEF_AURAKAI_PRODUCTION_PROOF.md
feature-module/: build.gradle.kts
genesis/: lint-baseline.xml
gradle/: java-version.gradle.kts  libs.versions.toml
regenesis-duo-edit-20251226-235316/regenesis-duo-edit-20251226-235316/aura/reactivedesign/auraslab/src/: CMakeLists.txt  native-lib.cpp
regenesis-duo-edit-20251226-235316/regenesis-duo-edit-20251226-235316/genesis/oracledrive/src/main/cpp/: CMakeLists.txt
regenesis-main/: META_INSTRUCT_APP.md  NUKE_ALL_CACHES.bat  SESSION_CONTEXT_DEC21.md  TWITTER_THREAD.md  build_after_disable_tests.txt  build_error_log.txt  build_errors_2.txt  build_kotlin.txt  build_output.txt  clean_errors.txt  comprehensive Genesis Protocol DOCUMENT BY CLAUDE ANTROPHTIC.MD  fix_java_24.bat  nuclear_clean_enhanced.bat
(+1318 files in other folders)
